--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
                 <img src="/assets/logo.png" alt="Logo">
             </div>
             <div class="menu">
-                <p>Sobre</p>
-                <p>Receitas</p>
+                <a href="/">Sobre</a>
+                <a href="/">Receitas</a>
             </div>
         </div>
 
@@ -28,13 +28,13 @@
             <div class="descricao">
                 <h2>As melhores receitas</h2>
                 <p>Aprenda a construir os melhores pratos com receitas
-                    criadas por profissionais do mundo inteiro</p>
+                    criadas por profissionais do mundo inteiro.</p>
             </div>
             <img src="/assets/chef.png" alt="chef">
         </div>
     </section>
     <section>
-        <h3>Mais acessadas</h3>
+        <h3 class="title">Mais acessadas</h3>
         <div class="galeria_receitas">
             <div class="receitas">
                 <img src="/assets/burger.png" alt="burger">
