finalizacao da pagina home

--- a/home.html
+++ b/home.html
@@ -38,33 +38,33 @@
         <div class="galeria_receitas">
             <div class="receitas">
                 <img src="/assets/burger.png" alt="burger">
-                <p>Triplo bacon burger</p>
-                <p>por Jorge Ribeiro</p>
+                <h4>Triplo bacon burger</h4>
+                <h5>por Jorge Ribeiro</h5>
             </div>
             <div class="receitas">
                 <img src="/assets/pizza.png" alt="pizza">
-                <p>Pizza Quatro Estações</p>
-                <p>por Fabiana Mello</p>
+                <h4>Pizza Quatro Estações</h4>
+                <h5>por Fabiana Mello</h5>
             </div>
             <div class="receitas">
                 <img src="/assets/espaguete.png" alt="espaguete">
-                <p>Espaguete ao molho</p>
-                <p>por Julia Kinoto</p>
+                <h4>Espaguete ao molho</h>
+                <h5>por Julia Kinoto</h5>
             </div>
             <div class="receitas">
                 <img src="/assets/lasanha.png" alt="lasanha">
-                <p>Lasanah mac'n cheese</p>
-                <p>por Juliano Vieira</p>
+                <h4>Lasanah mac'n cheese</h4>
+                <h5>por Juliano Vieira</h5>
             </div>
             <div class="receitas">
                 <img src="/assets/doce.png" alt="doce">
-                <p>Docinho pão-do-céu</p>
-                <p>por Ricardo Golvea</p>
+                <h4>Docinho pão-do-céu</h4>
+                <h5>por Ricardo Golvea</h5>
             </div>
             <div class="receitas">
                 <img src="/assets/asinhas.png" alt="asinhas">
-                <p>Asinhas de frango ao barbecue</p>
-                <p>por Vania Stroski</p>
+                <h4></p>Asinhas de frango ao barbecue</h4>
+                <h5>por Vania Stroski</h5>
             </div>
         </div>
     </section>
