--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <img src="/assets/logo.png" alt="Logo">
             </div>
             <div class="menu">
-                <a href="/">Sobre</a>
+                <a href="/sobre.html">Sobre</a>
                 <a href="/">Receitas</a>
             </div>
         </div>
