--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             </div>
             <div class="menu">
                 <a href="/sobre.html">Sobre</a>
-                <a href="/">Receitas</a>
+                <a href="receitas.html">Receitas</a>
             </div>
         </div>
 
