finalizacao do website

--- a/sobre.html
+++ b/sobre.html
@@ -17,8 +17,8 @@
                <a href="/home.html"><img src="/assets/logo.png" alt="Logo"></a> 
             </div>
             <div class="menu">
-                <a href="/">Sobre</a>
-                <a href="/">Receitas</a>
+                <a href="#">Sobre</a>
+                <a href="receitas.html">Receitas</a>
             </div>
         </div>
 
