--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <header>
         <div class="main-menu">
             <div class="logo">
-                <img src="/assets/logo.png" alt="Logo">
+               <a href="#"><img src="/assets/logo.png" alt="Logo"></a> 
             </div>
             <div class="menu">
                 <a href="/sobre.html">Sobre</a>
